# audio-thing

./: Cargo.toml  README.md  build.rs
header/: pulse.h
libflac_sys/: Cargo.toml  build.rs
libflac_sys/src/: lib.rs
liblame_sys/: Cargo.toml  build.rs
liblame_sys/src/: lib.rs
libpulse_sys/: Cargo.toml  build.rs
libpulse_sys/include/: libpulse.h
libpulse_sys/src/: lib.rs
src/: audio.rs  main.rs
src/audio/: dyn.rs  dynam.rs  mod.rs
src/filter/: mod.rs  resample.rs  stft.rs  tempo.rs
src/format/: flac.rs  mod.rs  mp3.rs  wave.rs
src/format/mp3/: index.rs  mod.rs
src/player/: mod.rs  playback.rs
src/player/output/: mod.rs  pulse.rs
src/pulse/: mod.rs  simple.rs
testdata/: 10s_440hz_level8_16bit.flac  10s_440hz_level8_24bit.flac
testdata/Various Artists - Dark Sine of the Moon/: 00 - playlist.m3u  01 - The B-Trees - Lucy in the Cloud with Sine Waves.flac  02 - Michael FLACson - One or Zero.flac  03 - DJ Testo Ft. Curry RAII Yepsend - call() me Maybe<T>.flac
