[package]
name = "audio-thing"
version = "0.1.0"
authors = ["polyfloyd <floyd@polyfloyd.net>"]
publish = false

[profile.dev]
opt-level = 3

[features]
unstable = []

[dependencies]
badlog = "1.1.1"
byteorder = "1.2.2"
derive-error = "0.0.4"
dft = "0.5.5"
id3 = "0.2.3"
lazy_static = "1.0.0"
log = "0.4.1"
notify = "4.0.3"
rand = "0.4.2"
regex = "1.0.0"
rusqlite = { version = "0.13.0", features = [ "functions" ] }
sample = "0.9.1"
xdg = "2.1.0"
libflac_sys = { path = "libflac_sys" }
liblame_sys = { path = "liblame_sys" }
libpulse_sys = { path = "libpulse_sys" }
