[package]
name = "audio-thing"
version = "0.1.0"
edition = "2018"
authors = ["polyfloyd <floyd@polyfloyd.net>"]
publish = false

[profile.dev]
opt-level = 3

[features]
unstable = []

[dependencies]
byteorder = "1.2.4"
derive-error = "0.0.4"
dft = "0.5.5"
env_logger = "0.6"
id3 = "0.2.4"
lazy_static = "1.1.0"
log = "0.4"
notify = "4.0.4"
rand = "0.5.5"
regex = "1.0.2"
rusqlite = { version = "0.13.0", features = [ "functions" ] }
sample = "0.10.0"
xdg = "2.1.0"
libflac_sys = { path = "libflac_sys" }
liblame_sys = { path = "liblame_sys" }
libpulse_sys = { path = "libpulse_sys" }

[workspace]
members = [
	"libflac_sys",
	"liblame_sys",
	"libpulse_sys",
]
